--- a/app/src/main/res/layout/descripcion.xml
+++ b/app/src/main/res/layout/descripcion.xml
@@ -54,7 +54,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:gravity="center"
-                android:drawableTop="@mipmap/ic_local_phone_grey600_24dp"
+                android:drawableTop="@mipmap/pho"
                 android:textSize="16sp"
                 android:background="@drawable/selector_clickable_item_bg" />
 
