--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
 
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.dev.victor.people.MainActivity"
+    tools:context="com.proyecto.programacion.proyectoprogramacion.MainActivity">
     tools:showIn="@layout/activity_main">
 
     <android.support.v7.widget.RecyclerView
