--- a/app/src/main/res/layout/descripcion_2.xml
+++ b/app/src/main/res/layout/descripcion_2.xml
@@ -73,7 +73,7 @@
             android:paddingRight="16dp">
 
             <Button
-                android:id="@+id/boton1"
+                android:id="@+id/whatsapp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="WhatsApp"
